--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "enmap": "^5.9.2",
     "express": "^4.18.2",
-    "mailtrap": "^3.0.1",
+    "express-fileupload": "^1.4.0",
+    "formidable": "^2.0.1",
+    "nodemailer": "^6.8.0",
     "tesseract.js": "^3.0.3"
   }
 }
